@@ -1586,3 +1586,4 @@
 ( cvs diff -u -r 1.94.2.86 -r 1.94.2.87 src/messageview.c;  ) > 2.3.0cvs9.patchset
 ( cvs diff -u -r 1.654.2.1630 -r 1.654.2.1631 configure.ac;  ) > 2.3.0cvs10.patchset
 ( cvs diff -u -r 1.654.2.1631 -r 1.654.2.1632 configure.ac;  ) > 2.3.0cvs11.patchset
+( cvs diff -u -r 1.1.2.6 -r 1.1.2.7 manual/sylpheed-claws-manual.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/dtd/manual.xsl;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 manual/fr/sylpheed-claws-manual.xml;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 manual/pl/sylpheed-claws-manual.xml;  ) > 2.3.0cvs12.patchset
